# streamlit-audio-transcribe

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
app/: audio_transcribe.py  correct_text.py  my_app.py  simple_app.py
tests/: __init__.py  test_split_text_into_chunks.py
tutrial/: test_chatcompletions.py  test_split_audio.py  test_whisper.py
